Hide assistant's decorations for the tools that don't support that

BUG:424027